# glm-usage-tray

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  REACT_MIGRATION.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: App.svelte  App.tsx  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: api.rs  commands.rs  config.rs  debug.rs  lib.rs  main.rs  tasks.rs  tray.rs
src/components/: ConfigPanel.module.css  ConfigPanel.svelte  ConfigPanel.tsx  UsageDisplay.module.css  UsageDisplay.svelte  UsageDisplay.tsx
src/hooks/: useConfig.ts  useGlmUsage.ts
src/types/: api.ts
