[package]
name = "glm-usage-tray"
version = "0.2.0"
description = "GLM Coding Plan usage monitor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
tray-icon = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
